# usbsp

./: .gitignore  README.md  meson.build
ch32v203/: ch32v203-cross.ini  meson.build
ch32v203/src/: .cproject  .project  .template  CH32V203C8U6.launch  CH32V203C8U6.wvproj
ch32v203/src/src/: main.c  system.c  system.h  user.c  user.h
ch32v203/src/src/eeprom/: eeprom.c  eeprom.h
ch32v203/src/src/usb/: relay.c  relay.h  usb_relay.c  usb_relay.h
ch32v203/src/src/usb/usbd/: usb_desc.c  usb_desc.h  usb_endp.c  usb_hw.c  usb_hw.h  usb_istr.c  usb_istr.h  usb_prop.c  usb_prop.h  usb_pwr.c  usb_pwr.h  usbd.c  usbd.h
ch32v203/src/src/usb/usbh/: app.c  app.h  usb_config.h  usb_hid.c  usb_hid.h  usb_hub.c  usb_hub.h  usb_hw.c  usb_hw.h  usbh.c  usbh.h
hardware/: 1_1.kicad_sch  2_2.kicad_sch  fp-lib-table  sym-lib-table  usb_sp.kicad_pcb  usb_sp.kicad_pro  usb_sp.kicad_sch  usb_sp.kicad_sym
hardware/usb_sp_fp/: CONN-TH_10P-P1.27_HX-JN1.27-2X5P-ZZ-H4.9.kicad_mod  CRYSTAL-SMD_4P-L2.0-W1.6-BL.kicad_mod  CRYSTAL-SMD_4P-L3.2-W2.5-BL.kicad_mod  CRYSTAL-SMD_L3.2-W1.5-1.kicad_mod  HDR-TH_3P-P2.54-V-M.kicad_mod  IDC-TH_10P-P2.54_C5665.kicad_mod  OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  QFN-20_L3.0-W3.0-P0.40-TL-EP1.7.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BL.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BR.kicad_mod  SOT-666-6_L1.6-W1.2-P0.50-LS1.6-BL.kicad_mod  SW-SMD_L3.9-W3.0-P4.45.kicad_mod  TQFN-48_L7.0-W7.0-P0.50-BL-EP5.5.kicad_mod  UDFN-8_L3.0-W2.0-P0.50-BL-EP-3.kicad_mod  USB-A-SMD_10.0-QTJ6.3.kicad_mod  USB-A-SMD_917-181A102ES60200.kicad_mod  USB-C-SMD_KH-TYPE-C-16P.kicad_mod
hardware/usb_sp_fp/usb_sp_model/: CONN-TH_10P-P1.27_HX-JN1.27-2X5P-ZZ-H4.9.step  CRYSTAL-SMD_L3.2-W1.5-1.step  HDR-TH_3P-P2.54-V-M.step  IDC-TH_10P-P2.54_C5665.step  QFN-20_L3.0-W3.0-P0.40-TL-EP1.7.step  TQFN-48_L7.0-W7.0-P0.50-BL-EP5.5.step  USB-A-SMD_10.0-QTJ6.3.step  USB-A-SMD_917-181A102ES60200.step
